--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset=utf-8>
     <title>Help me choose</title>
+    <link href="./main.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <h1>Help me choose between...</h1>
-    <div>
-      <div>
+    <div class="inputSection">
+      <div class="inputs">
         <input placeholder="Something"></input>
-        <img src="https://www.w3schools.com/images/lamp.jpg" alt="Lamp"
       </div>
-      <button>Add</button>
+      <button class="addOption">Add</button>
      </div>
      <button>Go!</button>
    </body>
